other/add-labels/.chainsaw-test/pod-resources-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
  name: pod01
spec:
  containers:
  - name: bb
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    foo: bar
    bar: foo
  name: pod02
spec:
  containers:
  - name: bb
    image: busybox:1.35
