other/add-labels/.chainsaw-test/secret.yaml
apiVersion: v1
data:
  key: bGFiZWw=
kind: Secret
metadata:
  labels:
    bar: foo
  name: secret01
