other/add-labels/.chainsaw-test/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: svc01
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: ClusterIP
